# Agentic_travel_planner

./: .dockerignore  .gitignore  README.md  compass_artifact_wf-1c6ccfbc-52b9-428f-a460-99f8fd1eda58_text_markdown.md  docker-compose.yml  main.py  pyproject.toml
ai-travel-concierge/: .env.example  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  pytest.ini  requirements.txt
ai-travel-concierge/docs/architecture/: SYSTEM_DESIGN.md
ai-travel-concierge/docs/guides/: DEVELOPMENT.md
ai-travel-concierge/scripts/: init_vectordb.py  inspect_saver.py  reset_and_init.py  test_keys.py
ai-travel-concierge/src/: main.py
ai-travel-concierge/src/utils/: cache_manager.py  config.py  logger.py  rate_limiter.py
ai-travel-concierge/tests/: conftest.py
ai-travel-concierge/tests/unit/: test_all_travel_api_tools.py  test_planner_agent.py  test_reducer.py
backend/: .gitignore  Dockerfile  README.md  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/db/: crud.py  engine.py  models.py  seed.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  conversations.py  health.py
backend/app/services/: mock_agent.py  real_agent.py
backend/tests/: conftest.py  test_conversations.py  test_crud.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/chat/: page.tsx
frontend/components/: EmptyState.tsx  ErrorBoundary.tsx  ThemeToggle.tsx
frontend/components/chat/: ChatInput.tsx  ChatView.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageList.tsx  StreamingIndicator.tsx  SuggestedPrompts.tsx
frontend/components/sidebar/: AppSidebar.tsx  ConversationItem.tsx  ConversationList.tsx  SidebarFooter.tsx  SidebarHeader.tsx
frontend/components/ui/: badge.tsx  dropdown-menu.tsx
frontend/contexts/: ConversationContext.tsx
frontend/hooks/: useAutoScroll.ts  useChatStream.ts  useMediaQuery.ts
frontend/lib/: constants.ts  format.ts
frontend/lib/api/: chat.ts  client.ts  types.ts
frontend/tests/components/: ChatInput.test.tsx  MessageBubble.test.tsx
frontend/tests/hooks/: useChatStream.test.ts
frontend/tests/lib/: format.test.ts
frontend/tests/mocks/: conversations.ts  messages.ts  tool-results.ts
frontend/types/: conversation.ts  index.ts  trip.ts
(+29 files in other folders)
