[project]
name = "agentic-travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.15.0",
    "asyncpg>=0.30.0",
    "chromadb>=1.5.2",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=1.2.9",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.8",
    "langgraph>=1.0.8",
    "pydantic>=2.11.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.3",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.35.0",
]
